--- a/css/index2.css
+++ b/css/index2.css
@@ -15,3 +15,12 @@ html,body{
     margin: 0 auto;
     margin-top: 100px;
 }
+.circle:hover{
+    transition: all 0.2s;
+    animation: change 0.2s infinite;
+}
+@keyframes change{
+    50%{
+    background: radial-gradient(at center,red,gold);
+    }
+}
